# IconFix

./: IconFix.ps1  IconFix.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  release.yml
docs/: optimization-notes-v2.0.md
iconfix/: __init__.py  cli.py  constants.py  elevation.py  logging_utils.py  models.py  scanner.py  shortcut.py  steam.py  workflow.py
tests/: test_elevation.py  test_shortcut_parser.py  test_workflow.py
